Make requested changes. Support devtools integration (untested).

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "coverage:smoke": "yarn smoke:cicoverage && nyc report --reporter html",
     "coveralls": "cat unit-coverage.lcov | coveralls",
     "codecov": "codecov -f unit-coverage.lcov -F unit && codecov -f smoke-coverage.lcov -F smoke",
-    "devtools": "bash lighthouse-core/scripts/roll-to-devtools.sh",
+    "devtools": "node lighthouse-core/scripts/i18n/merge-dt-locales.js && bash lighthouse-core/scripts/roll-to-devtools.sh",
     "chrome": "node lighthouse-core/scripts/manual-chrome-launcher.js",
     "fast": "yarn start --emulated-form-factor=none --throttlingMethod=provided",
     "deploy-viewer": "yarn build-viewer --deploy",
@@ -135,6 +135,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jest": "^24.9.0",
     "jsdom": "^12.2.0",
+    "lighthouse-plugin-publisher-ads": "file:../publisher-ads-lighthouse-plugin/lighthouse-plugin-publisher-ads",
     "lodash.clonedeep": "^4.5.0",
     "npm-run-posix-or-windows": "^2.0.2",
     "nyc": "^13.3.0",
