--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "@types/ws": "^4.0.1",
     "@types/yargs": "^8.0.2",
     "@types/yargs-parser": "^15.0.0",
-    "@wardpeet/brfs": "2.1.0-0",
+    "@wardpeet/brfs": "2.1.0",
     "angular": "^1.7.4",
     "archiver": "^3.0.0",
     "browserify": "^16.2.3",
