fix from code review

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,8 @@ last-run-results.html
 !lighthouse-core/test/fixtures/artifacts/**/*.devtoolslog.json
 !lighthouse-core/test/fixtures/traces/**/*.trace.json
 !lighthouse-core/test/fixtures/traces/**/*.devtoolslog.json
+!lighthouse-core/test/fixtures/config-helpers/config/node_modules
+!lighthouse-core/test/fixtures/config-helpers/node_modules
 
 lighthouse-core/scripts/legacy-javascript/variants
 lighthouse-core/scripts/gcp-collection/gcp-data
