--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,8 @@
     // Opt-in to typechecking for some core tests.
     "lighthouse-core/test/scripts/lantern/constants-test.js",
     "lighthouse-core/test/gather/driver/execution-context-test.js",
+    "lighthouse-core/test/fraggle-rock/gather/session-test.js",
+    "lighthouse-core/test/fraggle-rock/gather/driver-test.js",
     "lighthouse-core/test/gather/driver-test.js",
     "lighthouse-core/test/gather/gather-runner-test.js",
     "lighthouse-core/test/audits/script-treemap-data-test.js"
