--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,6 @@ on:
   schedule:
     - cron: '0 5 * * *'
   workflow_dispatch: {}
-  push: # lol
 
 jobs:
   publish:
@@ -13,6 +12,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12.x
+          registry-url: https://registry.npmjs.org/
       - run: yarn --frozen-lockfile
 
       - run: bash $GITHUB_WORKSPACE/.github/scripts/bump-nightly-version.sh
