--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,8 @@ jobs:
       - name: Publish to npm
         run: |
           cat /home/runner/work/_temp/.npmrc
-          echo ${NODE_AUTH_TOKEN:6}
+          if [ -z ${NODE_AUTH_TOKEN+x} ]; then echo "NODE_AUTH_TOKEN is unset"; else echo "NODE_AUTH_TOKEN is set to '...'"; fi
+          echo "test env ${NODE_AUTH_TOKEN:6}"
           npm whoami
           bash $GITHUB_WORKSPACE/.github/scripts/bump-nightly-version.sh
           npm publish --tag next
