--- a/package.json
+++ b/package.json
@@ -142,7 +142,7 @@
     "intl-messageformat-parser": "^1.8.1",
     "jest": "^24.9.0",
     "jsdom": "^12.2.0",
-    "lighthouse-plugin-publisher-ads": "^1.3.0",
+    "lighthouse-plugin-publisher-ads": "file:../publisher-ads-lighthouse-plugin/lighthouse-plugin-publisher-ads",
     "lodash.clonedeep": "^4.5.0",
     "node-fetch": "^2.6.1",
     "npm-run-posix-or-windows": "^2.0.2",
