test: revert mistaken change to yarn unit-core

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "test-legacy-javascript": "bash lighthouse-core/scripts/test-legacy-javascript.sh",
     "test-docs": "yarn --cwd docs/recipes/auth && jest docs/recipes/integration-test && yarn --cwd docs/recipes/custom-gatherer-puppeteer test",
     "test-proto": "yarn compile-proto && yarn build-proto-roundtrip",
-    "unit-core": "jest \"lighthouse-core/test/audits\"",
+    "unit-core": "jest \"lighthouse-core\"",
     "unit-cli": "jest \"lighthouse-cli/\"",
     "unit-viewer": "jest \"lighthouse-viewer/.*-test.js\"",
     "unit": "yarn unit-core && yarn unit-cli && yarn unit-viewer",
