--- a/.github/workflows/issue-assigner.yml
+++ b/.github/workflows/issue-assigner.yml
@@ -9,4 +9,4 @@ jobs:
       - uses: patrickhulce/issue-assigner@eeec7a1
         with:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
-          maintainers: 'patrickhulce,paulirish,connorjclark,adamraine'
+          maintainers: 'patrickhulce,paulirish,connorjclark,adamraine,brendankenny'
