--- a/package.json
+++ b/package.json
@@ -52,8 +52,7 @@
     "watch": "yarn unit-core --watch",
     "unit:cicoverage": "yarn c8 --all yarn unit:ci",
     "coverage": "yarn unit:cicoverage && c8 report --reporter html",
-    "smoke:cicoverage": "yarn c8 yarn smoke -j=1 --retries=2",
-    "coverage:smoke": "yarn smoke:cicoverage && c8 report --reporter html",
+    "coverage:smoke": "yarn c8 yarn smoke -j=1 && c8 report --reporter html",
     "coveralls": "cat unit-coverage.lcov | coveralls",
     "devtools": "bash lighthouse-core/scripts/roll-to-devtools.sh",
     "chrome": "node lighthouse-core/scripts/manual-chrome-launcher.js",
