--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "@types/ws": "^4.0.1",
     "@types/yargs": "^15.0.11",
     "@types/yargs-parser": "^15.0.0",
-    "@typescript-eslint/parser": "4.16.1",
+    "@typescript-eslint/parser": "^4.21.0",
     "@wardpeet/brfs": "2.1.0",
     "angular": "^1.7.4",
     "archiver": "^3.0.0",
