--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,8 +79,6 @@ jobs:
         os: [ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     name: unit_${{ matrix.os }}
-    env:
-      GITHUB_WORKSPACE: ${{ github.workspace }}
 
     steps:
     - name: git clone
@@ -129,7 +127,7 @@ jobs:
 
     # For windows, just test the potentially platform-specific code.
     - name: yarn unit-cli
-      run: bash $GITHUB_WORKSPACE/.github/scripts/jest-retry.sh yarn unit-cli
+      run: yarn unit-cli || yarn unit-cli --onlyFailures
       if: matrix.os == 'windows-latest'
     - run: yarn diff:sample-json
       if: matrix.os == 'windows-latest'
