--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       with:
         node-version: 12.x
 
-    - run: yarn --frozen-lockfile
+    - run: yarn install --frozen-lockfile --network-timeout 1000000
     - run: yarn build-all
 
     # Run tests that require headfull Chrome.
@@ -106,7 +106,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install protobuf==3.7.1
 
-    - run: yarn --frozen-lockfile
+    - run: yarn install --frozen-lockfile --network-timeout 1000000
 
     - run: yarn test-proto # Run before unit-core because the roundtrip json is needed for proto tests.
 
@@ -172,7 +172,7 @@ jobs:
       working-directory: /home/runner
       run: bash $GITHUB_WORKSPACE/lighthouse-core/scripts/download-chrome.sh && mv chrome-linux chrome-linux-tot
 
-    - run: yarn --frozen-lockfile
+    - run: yarn install --frozen-lockfile --network-timeout 1000000
 
     - run: sudo apt-get install xvfb
     - name: Run smoke tests
@@ -204,7 +204,7 @@ jobs:
       with:
         node-version: 12.x
 
-    - run: yarn --frozen-lockfile
+    - run: yarn install --frozen-lockfile --network-timeout 1000000
 
     - name: Run smoke tests
       run: yarn smoke --debug -j=1 --retries=2 dbw oopif offline lantern metrics
@@ -222,7 +222,7 @@ jobs:
       with:
         node-version: 12.x
 
-    - run: yarn --frozen-lockfile
+    - run: yarn install --frozen-lockfile --network-timeout 1000000
     - run: yarn build-devtools
 
     - run: sudo apt-get install xvfb
