--- a/.npmignore
+++ b/.npmignore
@@ -22,7 +22,9 @@ lighthouse-logger/
 !lighthouse-core/scripts/manual-chrome-launcher.js
 !lighthouse-core/scripts/download-chrome.sh
 
-lighthouse-cli/test
+lighthouse-cli/test/cli
+lighthouse-cli/test/fixtures
+lighthouse-cli/test/smokehouse/test-definitions
 
 results/
 lantern-data/
