--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   # `smoke` runs as a matrix across 4 jobs:
-  #  * The smoketest groups are split across two runners, to parallelize.
+  #  * The smoke tests are split into two batches, to parallelize.
   #  * Then, those are run with both Chrome stable and ToT Chromium, in parallel
   smoke:
     strategy:
@@ -19,9 +19,9 @@ jobs:
     runs-on: ubuntu-latest
     env:
       # The smokehouse tests run by job `test set 1`. `test set 2` will run the rest.
-      SMOKE_GROUP_1: a11y oopif pwa pwa2 pwa3 dbw redirects errors offline
+      SMOKE_BATCH_1: a11y oopif pwa pwa2 pwa3 dbw redirects errors offline
     # Job named e.g. "Chrome stable, test set 1".
-    name: Chrome ${{ matrix.chrome-channel }}, group ${{ matrix.smoke-test-invert == false && '1' || '2' }}
+    name: Chrome ${{ matrix.chrome-channel }}, batch ${{ matrix.smoke-test-invert == false && '1' || '2' }}
 
     steps:
     - name: git clone
@@ -50,7 +50,7 @@ jobs:
     - run: sudo apt-get install xvfb
     - name: Run smoke tests
       run: |
-        xvfb-run --auto-servernum yarn c8 yarn smoke --debug -j=1 --retries=2 --invert-match ${{ matrix.smoke-test-invert }} $SMOKE_GROUP_1
+        xvfb-run --auto-servernum yarn c8 yarn smoke --debug -j=1 --retries=2 --invert-match ${{ matrix.smoke-test-invert }} $SMOKE_BATCH_1
         yarn c8 report --reporter text-lcov > smoke-coverage.lcov
 
     - name: Upload test coverage to Codecov
@@ -66,7 +66,7 @@ jobs:
   # Only run smoke tests for windows against stable chrome.
   smoke-windows:
     runs-on: windows-latest
-    name: Chrome stable, Windows
+    name: Windows
 
     steps:
     - name: git clone
