--- a/.npmignore
+++ b/.npmignore
@@ -22,6 +22,8 @@ lighthouse-logger/
 !lighthouse-core/scripts/manual-chrome-launcher.js
 !lighthouse-core/scripts/download-chrome.sh
 
+# Exclude the CLI smoketests but keep the smoketest runner that is used
+# by downstream projects (e.g. publisher ads).
 lighthouse-cli/test/cli
 lighthouse-cli/test/fixtures
 lighthouse-cli/test/smokehouse/test-definitions
