--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./lighthouse-core/index.js",
   "bin": {
     "lighthouse": "./lighthouse-cli/index.js",
-    "chrome-debug": "./lighthouse-core/scripts/manual-chrome-launcher.js"
+    "chrome-debug": "./lighthouse-core/scripts/manual-chrome-launcher.js",
+    "smokehouse": "./lighthouse-cli/test/smokehouse/frontends/smokehouse-bin.js"
   },
   "engines": {
     "node": ">=12.13.0"
@@ -141,7 +142,7 @@
     "jest": "^26.6.1",
     "jsdom": "^12.2.0",
     "lighthouse-plugin-publisher-ads": "^1.3.0",
-    "lodash.clonedeep": "^4.5.0",
+    "mime-types": "^2.1.30",
     "node-fetch": "^2.6.1",
     "npm-run-posix-or-windows": "^2.0.2",
     "package-json-versionify": "^1.0.4",
@@ -171,6 +172,7 @@
     "jsonlint-mod": "^1.7.6",
     "lighthouse-logger": "^1.2.0",
     "lighthouse-stack-packs": "^1.4.0",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.isequal": "^4.5.0",
     "lodash.set": "^4.3.2",
