--- a/.npmignore
+++ b/.npmignore
@@ -53,8 +53,7 @@ results.html
 *.lcov
 
 # generated files needed for publish
-dist/*
-dist/report/*
+dist/**
 !dist/report/standalone.js
 
 # large files
