--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "allowJs": true,
     "checkJs": true,
     "strict": true,
-    // TODO: turn this off to be fully `strict`.
+    // TODO: remove the next line to be fully `strict`.
     "useUnknownInCatchVariables": false,
     // "listFiles": true,
     // "noErrorTruncation": true,
