--- a/report/tsconfig.json
+++ b/report/tsconfig.json
@@ -7,7 +7,7 @@
 
     // Limit to base JS and DOM defs.
     "lib": ["es2020", "dom", "dom.iterable"],
-    // Don't include any node_module types.
+    // Don't include any types from node_modules.
     "types": [],
     "target": "es2020",
     "module": "es2020",
