--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "devtools-protocol": "0.0.863986",
     "eslint": "^7.23.0",
     "eslint-config-google": "^0.9.1",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-local-rules": "0.1.0",
     "event-target-shim": "^6.0.2",
     "exorcist": "^1.0.1",
