--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "@types/ws": "^7.0.0",
     "@types/yargs": "^15.0.11",
     "@types/yargs-parser": "^15.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
     "@wardpeet/brfs": "2.1.0",
     "angular": "^1.7.4",
