--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -120,15 +120,7 @@ jobs:
 
     - run: sudo apt-get install xvfb
     - name: yarn smoke --fraggle-rock
-      run: xvfb-run --auto-servernum yarn smoke --debug --fraggle-rock -j=1 --retries=0 csp
-    - run: xvfb-run --auto-servernum yarn smoke --debug --fraggle-rock -j=1 --retries=0 csp
-    - run: xvfb-run --auto-servernum yarn smoke --debug --fraggle-rock -j=1 --retries=0 csp
-    - run: xvfb-run --auto-servernum yarn smoke --debug --fraggle-rock -j=1 --retries=0 csp
-    - run: xvfb-run --auto-servernum yarn smoke --debug --fraggle-rock -j=1 --retries=0 csp
-    - run: xvfb-run --auto-servernum yarn smoke --debug --fraggle-rock -j=1 --retries=0 csp
-    - run: xvfb-run --auto-servernum yarn smoke --debug --fraggle-rock -j=1 --retries=0 csp
-    - run: xvfb-run --auto-servernum yarn smoke --debug --fraggle-rock -j=1 --retries=0 csp
-    - run: xvfb-run --auto-servernum yarn smoke --debug --fraggle-rock -j=1 --retries=0 csp
+      run: bash run.sh
 
     # Fail if any changes were written to source files.
     - run: git diff --exit-code
