--- a/.github/workflows/package-test.yml
+++ b/.github/workflows/package-test.yml
@@ -24,6 +24,7 @@ jobs:
         node-version: 12.x
 
     - run: yarn install --frozen-lockfile --network-timeout 1000000
+    - run: yarn build-report
     - run: sudo apt-get install xvfb
 
     - run: xvfb-run --auto-servernum bash lighthouse-core/scripts/release/package-test.sh
