--- a/.github/workflows/package-test.yml
+++ b/.github/workflows/package-test.yml
@@ -4,7 +4,7 @@ on:
   pull_request: # run on all PRs, not just PRs to a particular branch
 
 jobs:
-  if: contains(github.context.payload.pull_request.title, '/^v\d+\.\d+\.\d+/')
+  if: startsWith(github.context.payload.pull_request.title, 'v')
   package-test:
     runs-on: ubuntu-latest
     name: Package Test
